--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_to_second_activity"
-        style="@style/btn_style"
+        android:id="@+id/button_to_second_activity"
+        style="@style/button_style"
         android:layout_marginTop="40dp"
         android:text="@string/btn_text"
         app:cornerRadius="12sp"
