--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -24,14 +24,14 @@
         style="@style/img_style"
         android:layout_height="242dp"
         android:src="@drawable/img_secondary_activity"
-        app:layout_constraintBottom_toTopOf="@id/btn_notification"
+        app:layout_constraintBottom_toTopOf="@id/button_notification"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img_rectangle" />
 
     <Button
-        android:id="@+id/btn_notification"
-        style="@style/btn_style"
+        android:id="@+id/button_notification"
+        style="@style/button_style"
         android:layout_marginTop="16dp"
         android:text="@string/btn_text_notification"
         app:cornerRadius="12sp"
