--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/btn_back"
+        android:id="@+id/button_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -60,7 +60,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profile_border" />
 
-    <ImageView
+    <View
         android:id="@+id/profile_about"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -68,7 +68,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/profile_about_rectangle"
+        android:background="@drawable/profile_about_rectangle"
         app:layout_constraintBottom_toBottomOf="@id/profile_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/img_view"
@@ -127,7 +127,7 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/profile_btn"
+        app:layout_constraintBottom_toTopOf="@id/profile_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profile_background">
@@ -170,20 +170,20 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/profile_btn"
+        android:id="@+id/profile_button"
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/profile_btn_color"
+        android:backgroundTint="@color/profile_button_color"
         android:fontFamily="@font/roboto"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
         android:insetBottom="0dp"
         android:text="@string/btn_profile_text"
-        android:textColor="@color/profile_btn_text_color"
+        android:textColor="@color/profile_button_text_color"
         android:textSize="14sp"
         app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
