--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="text_color">#000000</color>
     <color name="text_title_color">#6D6A6A</color>
-    <color name="btn_color">#D9D9D9</color>
-    <color name="profile_btn_text_color">#FFFFFF</color>
-    <color name="profile_btn_color">#009DFF</color>
+    <color name="button_color">#D9D9D9</color>
+    <color name="profile_button_text_color">#FFFFFF</color>
+    <color name="profile_button_color">#009DFF</color>
 </resources>
