--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="btn_style">
+    <style name="button_style">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">32dp</item>
         <item name="android:layout_marginEnd">32dp</item>
-        <item name="android:backgroundTint">@color/btn_color</item>
+        <item name="android:backgroundTint">@color/button_color</item>
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:paddingStart">93dp</item>
         <item name="android:paddingEnd">94dp</item>
